--- a/pom.xml
+++ b/pom.xml
@@ -219,4 +219,21 @@
 		<version>1.0.0-SNAPSHOT</version>
 	</dependency>
   </dependencies>
+  <build>
+      <plugins>
+              <plugin>
+				  <groupId>org.apache.maven.plugins</groupId>
+                  <artifactId>maven-source-plugin</artifactId>
+                  <version>2.1.1</version>
+                  <executions>
+                      <execution>
+                          <id>at</id>
+                          <goals>
+                              <goal>jar-no-fork</goal>
+                          </goals>
+                      </execution>
+                  </executions>
+              </plugin>
+          </plugins>
+      </build>
 </project>
